--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Caveat&family=Montserrat&display=swap" rel="stylesheet">
 <!-- ***********************  Styles  *********************** -->
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="styles.css">
   </head>
   <body>
     <main>
@@ -35,14 +35,14 @@
         <section>
 
           <h3>Happy Prance</h3>
-          <img src="images/thumbnail-happy-prance.png" alt="happy prance">
+          <img src="thumbnail-happy-prance.png" alt="happy prance">
           <p>Summary or description of the project and/or your role in it. Add as many paragraphs as you need.</p>
           <a class="btn" href="https://rosa992.github.io/happyprance/" target="_blank">View project / case study</a>
         </section>
 
         <section>
           <h3>Dice Game</h3>
-          <img class="dice" src="images/thumbnail-dice-game.png" alt="dice game">
+          <img class="dice" src="thumbnail-dice-game.png" alt="dice game">
           <p>Summary or description of the project and/or your role in it. Add as many paragraphs as you need.</p>
           <a class="btn" href="https://rosa992.github.io/dicegame/" target="_blank">View project / case study</a>
         </section>
@@ -50,7 +50,7 @@
 
         <section>
           <h3>Client List</h3>
-          <img src="images/thumbnail-client-list.png" alt="description of image">
+          <img src="thumbnail-client-list.png" alt="description of image">
           <p>Summary or description of the project and/or your role in it. Add as many paragraphs as you need.</p>
           <a class="btn" href="https://rosa992.github.io/clientList/" target="_blank">View project / case study</a>
         </section>
