--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
         <!-- Copy the whole <section> block to add more projects. -->
         <section class="project-item">
-<img src="images/thumbnail-happy-prance.png" alt="happy prance">
+<img src="thumbnail-happy-prance.png" alt="happy prance">
           <h3>Happy Prance</h3>
 
           <p>Summary or description of the project and/or your role in it. Add as many paragraphs as you need.</p>
@@ -41,7 +41,7 @@
         </section>
 
         <section class="project-item">
-          <img class="dice" src="images/thumbnail-dice-game.png" alt="dice game">
+          <img class="dice" src="thumbnail-dice-game.png" alt="dice game">
           <h3>Dice Game</h3>
 
           <p>Summary or description of the project and/or your role in it. Add as many paragraphs as you need.</p>
@@ -50,7 +50,7 @@
 
 
         <section class="project-item">
-<img src="images/thumbnail-client-list.png" alt="description of image">
+<img src="thumbnail-client-list.png" alt="description of image">
           <h3>Client List</h3>
 
           <p>Summary or description of the project and/or your role in it. Add as many paragraphs as you need.</p>
