--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
 
         <section class="project-item">
-<img src="thumbnail-client-list.png" alt="description of image">
+<img src="thumbnail-client-list.png" alt="client list">
           <h3>Client List</h3>
 
           <p>Summary or description of the project and/or your role in it. Add as many paragraphs as you need.</p>
