--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <h1>Rosa Hamilton</h1>
         <h2>Computer Programming Student | Aspiring Game Designer</h2>
 
-        <p>I have always had a passion for computer systems and video games, have used different platforms such as, Nintendo Wii and Xbox 360. For years I have worked with separate operating systems, MAC, Windows and briefly explored Linux RedHat utilising VMware, I have been greatly appreciative to have been given the opportunity to learn of the differences each one has to offer.</p>
+        <p>For years I have worked with separate operating systems, MAC, Windows and briefly explored Linux RedHat utilising VMware, I have been greatly appreciative to have been given the opportunity to learn of the differences each one has to offer.</p>
         <p>I am currently enrolled at Algonquin College pursuing a diploma in Computer Programming to expand my knowledge in this industry further. Throughout the course of my program, I have studied the essentials of programming, Java language and MySQL database. I have also acquired knowledge through self-directed learning with Bootstrap framework, programming languages such as, Html5, Css3 and, JavaScript. In addition to this I’ve familiarized myself with design fundamentals through UI/UX design, Blender Animation and video game creation using Unity Technologies and Unreal Engine. </p>
         <div>
       </header>
@@ -36,7 +36,7 @@
 <img src="thumbnail-happy-prance.png" alt="happy prance">
           <h3>Happy Prance</h3>
 
-          <p>Summary or description of the project and/or your role in it. Add as many paragraphs as you need.</p>
+          <p>Dog walking website example, completed as part of Udemy course, The Complete Web Development Bootcamp.</p>
           <a class="btn" href="https://rosa992.github.io/happyprance/" target="_blank">View project / case study</a>
         </section>
 
@@ -44,7 +44,7 @@
           <img class="dice" src="thumbnail-dice-game.png" alt="dice game">
           <h3>Dice Game</h3>
 
-          <p>Summary or description of the project and/or your role in it. Add as many paragraphs as you need.</p>
+          <p>Dice game example, completed as part Udemy course, The Complete Web Development Bootcamp.</p>
           <a class="btn" href="https://rosa992.github.io/dicegame/" target="_blank">View project / case study</a>
         </section>
 
@@ -53,7 +53,7 @@
 <img src="thumbnail-client-list.png" alt="description of image">
           <h3>Client List</h3>
 
-          <p>Summary or description of the project and/or your role in it. Add as many paragraphs as you need.</p>
+          <p>Pet Sitting info, for keeping track of contacts for clients and animal care information. Completed as a side project for current job as pet sitter.</p>
           <a class="btn" href="https://rosa992.github.io/clientList/" target="_blank">View project / case study</a>
         </section>
 
