--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       <section class="projects">
 <div class="content-wrap divider">
         <h2>Featured Projects</h2>
-        <p>View selected projects below. More information can be found at <a class="btn" href="http://christinatruong.com">christinatruong.com</a>.</p>
+        <p>View selected projects below. More information can be found at <a class="btn" href="https://github.com/Rosa992">Rosa Hamilton GitHub</a>.</p>
 
         <!-- Copy the whole <section> block to add more projects. -->
         <section class="project-item">
